[package]
name = "keystore-tools-rs"
version = "0.1.0"
edition = "2021"
authors = ["EluvK"]
description = "A Rust binary tools for keystore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
clap = { version = "3.2.14", features = ["derive"] }
ctr = "0.9.1"
digest = "0.10.3"
ethereum-types = { version = "0.13.1" }
hex = "0.4.3"
k256 = "0.11.3"
rand = "0.8.5"
scrypt = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.1"
thiserror = { version = "1.0.31", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }


[[bin]]
name = "keystore_generator"
path = "./bin/keystore_generator.rs"
