[package]
name = "top-keystore-tools-rs"
version = "0.1.0"
edition = "2021"
authors = ["EluvK"]
description = "A Rust binary tools for TOP-Chain keystore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
clap = { version = "4.0.18", features = ["derive"] }
ctr = "0.9.1"
cbc = "0.1.2"
digest = "0.10.3"
hex = "0.4.3"
hkdf = "0.12.3"
k256 = "0.11.3"
rand = "0.8.5"
scrypt = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.1"
sha2 = "0.10.6"
thiserror = { version = "1.0.31", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
base64 = "0.13.1"
base58 = "0.2.0"
ripemd = "0.1.3"


[[bin]]
name = "top_keystore_generator"
path = "./bin/top_keystore_generator.rs"

# [[bin]]
# name = "keystore_decryptor"
# path = "./bin/keystore_decryptor.rs"
